SERVER-7010 do not use massert to validate user input

Change two uses of massert() to uassert() in
Scope::validateObjectIdString() to prevent stack trace on
an invalid string supplied to the ObjectId() constructor.