src/mongo/scripting/engine.cpp
@@ -159,7 +159,7 @@ namespace mongo {
     }
 
     void Scope::validateObjectIdString( const string &str ) {
-        massert( 10448 , "invalid object id: length", str.size() == 24 );
+        uassert( 10448 , "invalid object id: length", str.size() == 24 );
 
         for ( string::size_type i=0; i<str.size(); i++ ) {
             char c = str[i];
@@ -168,7 +168,7 @@ namespace mongo {
                     ( c >= 'A' && c <= 'F' ) ) {
                 continue;
             }
-            massert( 10430 ,  "invalid object id: not hex", false );
+            uassert( 10430 ,  "invalid object id: not hex", false );
         }
     }
 
